--- a/taskmanager/templates/tasks.html
+++ b/taskmanager/templates/tasks.html
@@ -6,7 +6,7 @@
 <div class="row">
     <div class="col s12 center-align">
         <a href="{{ url_for('add_task') }}" class="btn large light-blue darken-2">
-            Add Category <i class="fas fa-plus-square right"></i>
+            Add Task <i class="fas fa-plus-square right"></i>
         </a>
     </div>
 </div>
@@ -24,6 +24,10 @@
       <div class="collapsible-body">
           <strong>{{ task.category }}</strong>
           <p>{{ task.task_description }}</p>
+          <p>
+            <a href="{{ url_for('edit_task', task_id=task.id) }}" class="btn green accent-4">Edit</a>
+            <a href="{{ url_for('delete_task', task_id=task.id) }}" class="btn red">Delete</a>
+          </p>
         </div>
     </li>
     {% endfor %}
